--- a/roles/coturn/handlers/main.yml
+++ b/roles/coturn/handlers/main.yml
@@ -5,9 +5,7 @@
     state: restarted
 
 - name: Restart Coturn
-  community.docker.docker_container:
-    name: coturn
-    state: started
-    restart: true
-    comparisons:
-      '*': ignore
+  community.docker.docker_compose_v2:
+    project_src: "{{ coturn_docker_compose_folder }}"
+    state: restarted
+    services: coturn
