--- a/roles/scalelite/tasks/initial-certificates.yml
+++ b/roles/scalelite/tasks/initial-certificates.yml
@@ -34,15 +34,17 @@
   delay: 10
 
 - name: Generate base domain certificates
-  community.docker.docker_container_exec:
-    container: certbot
+  community.docker.docker_compose_v2_exec:
+    project_src: "{{ scalelite_docker_compose_folder }}"
+    service: certbot
     command: certbot certonly --noninteractive --manual --manual-auth-hook /certbot/manual-update.sh --post-hook /certbot/post-hook.sh --preferred-challenges=dns -d *.{{ scalelite_basedomain }} -d {{ scalelite_basedomain }} --expand --agree-tos --email {{ scalelite_letsencrypt_email }}  {{ '--dry-run' if ansible_check_mode else '' }} --logs-dir /certbot/logs --work-dir /certbot/work
   # Certbot flag --dry-run is used in check mode
   check_mode: false
 
 - name: Generate hostname certificate
-  community.docker.docker_container_exec:
-    container: certbot
+  community.docker.docker_compose_v2_exec:
+    project_src: "{{ scalelite_docker_compose_folder }}"
+    service: certbot
     command: certbot certonly --noninteractive --webroot -w /var/www/certbot -d {{ scalelite_host }} --expand --agree-tos --email {{ scalelite_letsencrypt_email }} --manual-public-ip-logging-ok {{ '--dry-run' if ansible_check_mode else '' }} --logs-dir /certbot/logs --work-dir /certbot/work
   # Certbot flag --dry-run is used in check mode
   check_mode: false
@@ -57,8 +59,9 @@
     label: "{{ instance.name }}"
 
 - name: Generate hostname certificate
-  community.docker.docker_container_exec:
-    container: certbot
+  community.docker.docker_compose_v2_exec:
+    project_src: "{{ scalelite_docker_compose_folder }}"
+    service: certbot
     command: certbot certonly --noninteractive --webroot -w /var/www/certbot -d {{ scalelite_host }} --expand --agree-tos --email {{ scalelite_letsencrypt_email }} --manual-public-ip-logging-ok {{ '--dry-run' if ansible_check_mode else '' }} --logs-dir /certbot/logs --work-dir /certbot/work
   # Certbot flag --dry-run is used in check mode
   check_mode: false
