--- a/roles/scalelite/tasks/nginx.yml
+++ b/roles/scalelite/tasks/nginx.yml
@@ -21,7 +21,7 @@
     - owasp/REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
     - owasp/RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf
   when: scalelite_modsec_enabled
-  notify: Restart OWASP
+  notify: Restart scalelite-nginx
 
 - name: Creating Nginx DH parameters next, this can take some time
   debug:
