Allow multiple resources for different Grafanas

--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -50,7 +50,7 @@
       apiVersion: grafana.integreatly.org/v1beta1
       kind: GrafanaDatasource
       metadata:
-        name: "{{ item.name | lower }}"
+        name: {{ grafana_resource_name }}-{{ item.name | lower }}
       spec:
         instanceSelector:
           matchLabels:
@@ -75,7 +75,7 @@
       apiVersion: grafana.integreatly.org/v1beta1
       kind: GrafanaFolder
       metadata:
-        name: {{ item.name }}
+        name: {{ grafana_resource_name }}-{{ item.name }}
       spec:
         instanceSelector:
           matchLabels:
@@ -97,7 +97,7 @@
       apiVersion: grafana.integreatly.org/v1beta1
       kind: GrafanaContactPoint
       metadata:
-        name: {{ item.name }}
+        name: {{ grafana_resource_name }}-{{ item.name }}
       spec:
         name: {{ item.name }}
         type: {{ item.type }}
@@ -120,7 +120,7 @@
       apiVersion: grafana.integreatly.org/v1beta1
       kind: GrafanaDashboard
       metadata:
-        name: {{ item.name }}
+        name: {{ grafana_resource_name }}-{{ item.name }}
       spec:
         instanceSelector:
           matchLabels:
@@ -153,7 +153,7 @@
       apiVersion: grafana.integreatly.org/v1beta1
       kind: GrafanaMuteTiming
       metadata:
-        name: {{ item.name }}
+        name: {{ grafana_resource_name }}-{{ item.name }}
       spec:
         instanceSelector:
           matchLabels:
