--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+# Helm does not provide functionality to update custom resource definitions. This can result in the operator misbehaving
+#  when a release contains updates to the custom resource definitions. To avoid issues due to outdated or missing definitions,
+#  run the following command before updating an existing installation:
+- name: Install grafana-operator CRDs
+  kubernetes.core.k8s:
+    state: present
+    kubeconfig: "{{ kubeconfig }}"
+    proxy: "{{ proxy_url | default(omit, true) }}"
+    proxy_headers: "{{ proxy_headers | default(omit, true) }}"
+    namespace: "{{ grafana_namespace }}"
+    resource_definition: "{{ lookup('ansible.builtin.url', 'https://github.com/grafana/grafana-operator/releases/download/{{ grafana_operator_chart_version }}/crds.yaml', split_lines=False ) }}"
+    server_side_apply:
+      field_manager: ansible
+      force_conflicts: true
+  tags: grafana-operator
+
 - name: Install grafana-operator
   kubernetes.core.helm:
     name: grafana-operator
@@ -10,7 +26,7 @@
     kubeconfig: "{{ kubeconfig }}"
     release_namespace: "{{ grafana_namespace }}"
     values:
-      "{{ grafana_operator_values | combine(grafana_operator_values_mutable) }}"
+      "{{ grafana_operator_values }}"
   tags: grafana-operator
 
 - name: Create Grafana instance
@@ -20,7 +36,7 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    definition: "{{ grafana_resource }}"
+    definition:  "{{ grafana_resource }}"
   tags: grafana-operator
 
 - name: Create Grafana datasources
@@ -30,7 +46,21 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    template: "grafana-datasource.yml.j2"
+    definition: |
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaDatasource
+      metadata:
+        name: {{ grafana_resource_name }}-{{ item.name | lower }}
+      spec:
+        instanceSelector:
+          matchLabels:
+            {{ grafana_label_selector }}
+        datasource:
+          access: proxy
+          name: "{{ item.name }}"
+          type: "{{ item.type }}"
+          url: "{{ item.url }}"
+          isDefault: {{ item.default | default(false) }}
   loop: "{{ grafana_combined_datasources }}"
   tags: grafana-operator
 
@@ -41,7 +71,18 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    template: "grafana-folder.yml.j2"
+    definition: |
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaFolder
+      metadata:
+        name: {{ grafana_resource_name }}-{{ item.name }}
+      spec:
+        instanceSelector:
+          matchLabels:
+            {{ grafana_label_selector }}
+        title: {{ item.titel }}
+        permissions: |
+          {{ item.permissions | indent(width=4, first=False) }}
   loop: "{{ grafana_combined_folders }}"
   tags: grafana-operator
 
@@ -52,7 +93,19 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    template: "grafana-contact-point.yml.j2"
+    definition: |
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaContactPoint
+      metadata:
+        name: {{ grafana_resource_name }}-{{ item.name }}
+      spec:
+        name: {{ item.name }}
+        type: {{ item.type }}
+        instanceSelector:
+          matchLabels:
+            {{ grafana_label_selector }}
+        settings:
+          {{ item.settings }}
   loop: "{{ grafana_combined_contactpoints }}"
   tags: grafana-operator
 
@@ -63,7 +116,18 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    template: "grafana-dashboard.yml.j2"
+    definition: |
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaDashboard
+      metadata:
+        name: {{ grafana_resource_name }}-{{ item.name }}
+      spec:
+        instanceSelector:
+          matchLabels:
+            {{ grafana_label_selector }}
+        folder: {{  item.folder }}
+        json: >
+          {{ item.json | indent(width=4, first=False) }}
   loop: "{{ grafana_combined_dashboards }}"
   tags: grafana-operator
 
@@ -74,7 +138,7 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    template: "grafana-notification-policy.yml.j2"
+    template: 'grafana-np.yml.j2'
   when: not grafana_combined_notification_policy.disabled
   tags: grafana-operator
 
@@ -85,6 +149,21 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
-    template: "grafana-mute-timing.yml.j2"
+    definition: |
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaMuteTiming
+      metadata:
+        name: {{ grafana_resource_name }}-{{ item.name }}
+      spec:
+        instanceSelector:
+          matchLabels:
+            {{ grafana_label_selector }}
+        name: {{ item.name }}
+        editable: false
+        time_intervals:
+          - times:
+              - start_time: "{{ item.times.start }}"
+                end_time: "{{ item.times.end }}"
+            weekdays: {{ item.weekdays }}
   loop: "{{ grafana_combined_mutes }}"
   tags: grafana-operator
