--- a/roles/privacyidea_ha/defaults/main.yml
+++ b/roles/privacyidea_ha/defaults/main.yml
@@ -89,3 +89,6 @@ exporter_password: ""
 
 # node_exporter,mysql_exporter password
 privacyidea_galera_mysql_node_exporter: ""
+
+privacyidea_audit_privatekey_secret_name: ""
+privacyidea_audit_publickey_secret_name: ""
