--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -69,7 +69,7 @@
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     namespace: "{{ grafana_namespace }}"
     template: "grafana-notification-policy.yml.j2"
-  when: not grafana_combined_notification_policy.disabled
+  loop: "{{ grafana_combined_notification_policy }}"
 
 - name: Create Grafana Mutes
   kubernetes.core.k8s:
