--- a/roles/kubernetes_common/tasks/cert-manager.yml
+++ b/roles/kubernetes_common/tasks/cert-manager.yml
@@ -52,8 +52,9 @@
 - name: Install clusterissuer Helm chart
   kubernetes.core.helm:
     name: sc-cert-manager-clusterissuer
-    chart_ref: dbildungsplattform/cert-manager-clusterissuer"
-    chart_version: "{{ sc-cert-manager-clusterissuer_chart_version }}"
+    chart_ref: dbildungsplattform/cert-manager-clusterissuer
+    chart_version: "{{ sc_cert_manager_clusterissuer_chart_version }}"
     kubeconfig: "{{ kubeconfig }}"
     release_namespace: cert-manager
+    values: "{{ sc_cert_manager_clusterissuer_values }}"
   when: sc_cert_manager_clusterissuer_enabled is true
