--- a/roles/loki/tasks/main.yml
+++ b/roles/loki/tasks/main.yml
@@ -45,6 +45,7 @@
   when: loki_s3_enabled
 
 # For working secret transfer a 1password secret is needed
+# See https://docs.dbildungscloud.de/display/PROD/Loki
 # See https://docs.ansible.com/ansible/latest/collections/kubernetes/core/k8s_module.html
 - name: Create loki http basic auth secret
   kubernetes.core.k8s:
