--- a/roles/kubernetes_common/defaults/main.yml
+++ b/roles/kubernetes_common/defaults/main.yml
@@ -1,5 +1,7 @@
 kubernetes_event_exporter_chart_version: 2.1.2
-sc_cert_manager_clusterissuer_enabled: false
+cert_manager_clusterissuer_enabled: false
+cert_manager_clusterissuer_chart_version: 1.0.0
+cert_manager_clusterissuer_values: {}
 otcdns_wildcard_certificates: []
 # This is the default to keep backwards compatibility
 otc_cert_manager_enabled: "{{ otcdns_wildcard_certificates | length > 0 }}"
