DBP-1967 Fix server_monitoring fail2ban

--- a/roles/server_monitoring/tasks/main.yml
+++ b/roles/server_monitoring/tasks/main.yml
@@ -181,6 +181,8 @@
       logpath = {{ server_monitoring_nginx_logs_folder }}/error.log
       maxretry = 3
       bantime = 3600
+      banaction = iptables-multiport
+      chain = DOCKER-USER
     dest: /etc/fail2ban/jail.d/server-monitoring.local
     owner: root
     group: root
