--- a/roles/owasp/tasks/fail2ban.yml
+++ b/roles/owasp/tasks/fail2ban.yml
@@ -14,9 +14,21 @@
   copy:
     content: |
       [Definition]
-      failregex = ^<HOST> - - \[.*\] ".*" (4\d\d|5\d\d) .+$
+      failregex = ^<HOST> (-|\S+).* (-|\S+).* \[.*\] "[^"]*" (4\d\d|5\d\d) .+$
       ignoreregex =
     dest: /etc/fail2ban/filter.d/nginx-errors.conf
+    owner: root
+    group: root
+    mode: "0644"
+  notify: Restart Fail2ban
+
+- name: Create filter file for fail2ban nginx 401 errors
+  copy:
+    content: |
+      [Definition]
+      failregex = ^<HOST> (-|\S+).* (-|\S+).* \[.*\] "[^"]*" 401 .*$
+      ignoreregex =
+    dest: /etc/fail2ban/filter.d/nginx-401-errors.conf
     owner: root
     group: root
     mode: "0644"
@@ -34,6 +46,9 @@
     mode: "0644"
   notify: Restart Fail2ban
 
+  # For Fail2ban to work with Docker containers, some special settings are needed:
+  # - chain = DOCKER-USER
+  # - port must be set to the container port if it's different from the host port
 - name: Create jail file for fail2ban
   copy:
     content: |
@@ -43,21 +58,43 @@
       logpath = {{ owasp_nginx_logs_folder }}/*.log
       maxretry = 3
       bantime = 3600
+      backend = auto
+      banaction = iptables-multiport
+      chain = DOCKER-USER
+
+      [backend-nginx-http-auth]
+      enabled    = true
+      port       = {{ owasp_nginx_https_endpoints | map(attribute='proxy_port') | join(",") }}
+      filter     = nginx-401-errors
+      logpath = {{ owasp_nginx_logs_folder }}/access.log
+      maxretry = 3
+      bantime = 3600
+      backend = auto
+      banaction = iptables-multiport
+      chain = DOCKER-USER
+
       [nginx-errors]
       enabled    = true
-      port       = http,https
+      port       = 8080,8443
       filter     = nginx-errors
       logpath    = {{ owasp_nginx_logs_folder }}/*.log
       maxretry   = 100
       bantime    = 3600
       findtime   = 600
+      backend = auto
+      banaction = iptables-multiport
+      chain = DOCKER-USER
+
       [greenlight-signin-errors]
       enabled    = true
-      port       = http,https
+      port       = 8080,8443
       filter     = greenlight-signin-errors
       logpath    = {{ owasp_nginx_logs_folder }}/*.log
       maxretry   = 5
       bantime    = 3600
+      backend = auto
+      banaction = iptables-multiport
+      chain = DOCKER-USER
     dest: /etc/fail2ban/jail.d/jail.local
     owner: root
     group: root
