--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -3,26 +3,30 @@
       set_fact:
         sshd_public_keys: |
           {% set canonical_hosts  = [] %}
-          {% if item.permissions.sshd.hosts is string %}
-            {% set hosts = [ item.permissions.sshd.hosts ] %}
-          {% else %}
-            {% set hosts = item.permissions.sshd.hosts %}
-          {% endif %}
-          {% for host in hosts %}
-            {% set _ = canonical_hosts.extend(lookup('inventory_hostnames', host, wantlist=true)) %}
+          {% set sshd_public_key_map  = {} %}
+          {% for user in present_users %}
+            {% if item.permissions.sshd is defined %}
+              {% if item.permissions.sshd.hosts is string %}
+                {% set hosts = [ item.permissions.sshd.hosts ] %}
+              {% else %}
+                {% set hosts = item.permissions.sshd.hosts %}
+              {% endif %}
+              {% for host in hosts %}
+                {% set _ = canonical_hosts.extend(lookup('inventory_hostnames', host, wantlist=true)) %}
+              {% endfor %}
+              {% if inventory_hostname in canonical_hosts %}
+                {% set _ = sshd_public_key_list.update({item.name: lookup('file', 'sshkeys/' + item.name + '.pub')}) %}
+              {% endif %}
+            {% endif %}
           {% endfor %}
-          {% if inventory_hostname in canonical_hosts %}
-            {{ sshd_public_keys | default({}) | combine({item.name: lookup('file', 'sshkeys/' + item.name + '.pub')}) }}
-          {% endif %}
-      when: item.permissions.sshd is defined
-      loop: "{{ present_users }}"
+          {{ sshd_public_key_map }}
       tags:
         - sshd
 
 
     - name: Create {{ sshd_namespace }} namespace
       kubernetes.core.k8s:
-        state: "{{ (sshd_public_keys | strip | length == 0) | ternary('present', 'absent') }}"
+        state: "{{ (sshd_public_keys | length == 0) | ternary('present', 'absent') }}"
         kubeconfig: "{{ kubeconfig }}"
         proxy: "{{ proxy_url | default(omit, true) }}"
         proxy_headers: "{{ proxy_headers | default(omit, true) }}"
